# Info2

practica1/main/: CMakeLists.txt  main.cpp
practica2/: CMakeLists.txt  codigos_arduino.txt  main.cpp
practica3/: CMakeLists.txt  codi_decodi.h  codificacion_y_decodificacion.cpp  main.cpp
practica4/: CMakeLists.txt  main.cpp
